--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">ConfApp</string>
-    <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Conf App</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -14,6 +13,4 @@
     <string name="text_schedule">Schedule</string>
     <string name="text_about">About</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
