--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="textview_already_have_an_account_registration">Already have an account?</string>
     <string name="button_log_in_login">LOG IN</string>
     <string name="textview_back_to_registration_login">Back to registration</string>
+    <string name="sign_out_text">Sign out</string>
 
 </resources>
