--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="textview_back_to_registration_login">Back to registration</string>
     <string name="sign_out_text">Sign out</string>
     <string name="text_tryConnection">Try again</string>
-
+    <string name="title_activity_event_scrolling">EventScrollingActivity</string>
+    <string name="text_about_event">About This Event</string>
 </resources>
