Add .event.notification Add notification functionality to remind user of event in near future Change application icon - this will be changed later, I'm just tired of seeing basic android icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,6 @@
         <item>Q&amp;A</item>
     </string-array>
 
+    <string name="event_notification_channel_description">This event is starting soon</string>
 
 </resources>
