- MainActivity changed (nav drawer, first fragment) - Added CComment, CommentsRecyclerAdapter, list_item_comment - Changed Vitos amazing EventActivity pls dont kill me

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,6 @@
         zbog hrane, a tek onda radi novih znanja pripremili smo vrhunski catering pored kojeg nitko ne može ostati
         ravnodušan! \nVidimo se u Rijeci!
     </string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
