--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="button_register_registration">REGISTER</string>
     <string name="textview_already_have_an_account_registration">Already have an account?</string>
     <string name="button_log_in_login">LOG IN</string>
-    <string name="textview_back_to_registration_login">Back to registration</string>
+    <string name="textview_back_to_registration_login">New? Sign up here!</string>
     <string name="sign_out_text">Sign out</string>
     <string name="text_tryConnection">Try again</string>
     <string name="title_activity_event_scrolling">EventScrollingActivity</string>
