- added edit text and button (comment) in content_event_scrolling - changed CEvent and CComment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,7 @@
         ravnodušan! \nVidimo se u Rijeci!
     </string>
     <string name="title_activity_maps">Map</string>
+    <string name="write_a_comment">Write a comment...</string>
+    <string name="sendComment">send</string>
 
 </resources>
